Use Stream.toList() when possible