@@ -20,7 +20,6 @@ package org.apache.maven.project.harness;
 
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import org.apache.commons.jxpath.ri.QName;
 import org.apache.commons.jxpath.ri.model.NodeIterator;
@@ -49,7 +48,7 @@ class Xpp3DomAttributeIterator implements NodeIterator {
 
         this.attributes = this.node.getAttributes().entrySet().stream()
                 .filter(a -> a.getKey().equals(qname.getName()) || "*".equals(qname.getName()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public NodePointer getNodePointer() {
