@@ -26,7 +26,6 @@ import java.util.ArrayList;
 import java.util.Collection;
 import java.util.HashSet;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.apache.maven.model.Activation;
 import org.apache.maven.model.Profile;
@@ -67,10 +66,9 @@ public class DefaultProfileSelector implements ProfileSelector {
             Collection<org.apache.maven.api.model.Profile> profiles,
             ProfileActivationContext context,
             ModelProblemCollector problems) {
-        return getActiveProfiles(profiles.stream().map(Profile::new).collect(Collectors.toList()), context, problems)
-                .stream()
+        return getActiveProfiles(profiles.stream().map(Profile::new).toList(), context, problems).stream()
                 .map(Profile::getDelegate)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
