@@ -27,7 +27,6 @@ import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.List;
 import java.util.concurrent.TimeUnit;
-import java.util.stream.Collectors;
 
 import org.apache.maven.api.model.InputSource;
 import org.openjdk.jmh.annotations.*;
@@ -53,7 +52,7 @@ public class Xpp3DomPerfTest {
             Path userHome = Paths.get(System.getProperty("user.home"));
             poms = Files.walk(userHome.resolve(".m2/repository/org/apache/maven"))
                     .filter(p -> p.getFileName().toString().endsWith(".pom"))
-                    .collect(Collectors.toList());
+                    .toList();
         }
     }
 
